oh god not again

--- a/dsmixtures.tex
+++ b/dsmixtures.tex
@@ -345,6 +345,8 @@ Estimators for the variances of $N$ and $P_a$ are given in Web Appendix E.
 
 Extensive simulations were carried out to investigate performance, in terms of the accuracy of estimation of $P_a$ and $N$, under the circumstance when the true model is not known to the estimation procedure. Each simulation involved generating 200 replicate datasets from a specified mixture model, fitting each dataset with 1-, 2-, and 3-point mixture models for the detection function, and in each case recording estimated parameter values and abundance from the model with the lowest AIC.
 
+[[ Need to add in some blurb about the hazard rate mixtures ]]
+
 Four sets of simulations were run:
 \begin{enumerate}
 	\item Non-covariate 2-point detection functions for line transect data. Four different detection functions were tested; these are illustrated in the first row of Figure \ref{sim-detfcts}. The first two should be relatively easy to fit. The third should be harder, testing the behaviour of the model when the scale parameter of one of the mixture components is very large relative to the truncation distance. Finally, the fourth detection function has a large spike (i.e., a sharp decline in detectability at small distances), which is similar to that in some of the data we analyse in Section \ref{s:data}.
@@ -362,6 +364,9 @@ True parameters and average detectabilities are given in Web Appendix C.
 \label{sim-detfcts}
 \end{figure}
 
+
+[[probably need to re-write and/or cut this down]]
+
 Results from the simulation study are shown in Figure \ref{sim-boxplots}. Boxplots are of the estimated average detection probability, $\hat{P_a}$. The number under each boxplot gives the proportion of AIC best models that were of the same form as the true model (i.e. same number of mixture components and same covariates selected). For the first row (line transects with no covariates) we can see that in scenarios 1 and 3, both the true model and true probability of detection were found, even at low sample sizes; whereas in scenarios 2 and 4 there was a positive bias in the estimates of the probability of detection as well as a lower proportion of ``correct'' models being selected by AIC. In scenario 2 and 4 most of the weight (0.7 and 0.6, respectively) is given to the larger mixture component, thus the smaller component is swamped; making the simulated data look as if it were generated from a 1-point mixture.
 
 This effect can also be seen in the point transect simulations, but more severely. In this case one can see from the second row of Figure \ref{sim-detfcts} that the pdfs of the distances look very much like only one of the components of the mixture. Fitting only a 1-point mixture to data from a 2-point mixture has lead to a positive bias in the detection probabilities, however this is only to expected given that data generated from such models would look like a 1-point mixture.
@@ -369,6 +374,9 @@ This effect can also be seen in the point transect simulations, but more severel
 The results from the first of the 3-point mixtures show that detection function can be easily represented using a smaller number of mixture terms. At sample sizes of 120 and lower, a 1-point mixture model dominated (around 150 of the AIC selected models were 1-point mixtures) then at the two higher sample sizes, 2-point mixtures dominated. Scenario 2 is more like a ``true'' 3-point data set, although only at the two larger sample sizes was a 3-point model selected more than half of the time. Note that at the lower sample sizes, a 2-point mixture was selected more often than 1-point (137, 173 and 182 times for the lowest three sample sizes). This effect may be due to the large, potentially non-identifiable, scale parameter being confounded with the other parameters, although this did not appear to be problematic in the scenario 2 of the line transect non-covariate models, above.
 
 The covariate models again show an initial positive bias in the $P_a$ estimates but do still converge to the true value at higher sample sizes (bottom row of Figure \ref{sim-boxplots}). The numbers beneath the boxplots mask rather more for the covariate models than in the other cases, since model selection was performed on not only the number of mixtures but also on the inclusion of covariates. At the larger two sample sizes we see that the ``true'' model is selected almost all of the time. However,  at smaller sample sizes we see more interesting behaviour. For scenario 1, at the two lowest sample sizes a 1-point non-covariate model dominates, followed by 1-point with covariates, then 2-point covariate and 2-point non-covariate. So, as one would expect, the simplest two models are selected most, but the added information from the covariates means that the 2-point covariate is selected ahead of the 2-point non-covariate. At sample size 120, the 1- and 2-point covariate models are both selected about 70 times, and the non-covariate 1- and 2-point models about 30 times. Contrary to expectations the 3-point mixtures are barely selected at all (with or without covariates) leading us to believe that the covariates cannot simply be substituted by further mixture terms, even in the binary covariate case. Scenario 2 shows a slightly different picture; the non-covariate models are selected less, even at lower sample sizes (the 1-point covariate model was selected 90 times a the lowest sample size) which might be expected given that scenario 2 included a continuous covariate. As was the case for scenario 1, the 3-point models were barely selected at all. In both scenarios there seems to be a ``bite point'' between a sample size of 120 and 480 where the correct model is selected almost every time.
+
+[[ For the covariate models, when fitting an MCDS model with covariates, AIC would select non-monotonic models with vastly lower AICs (-2500, next lowest model was -600) with very different abundance estimates. Since we would not select such non-monotone models in a real analysis, the MCDS models were fitted without adjustments. (Maybe say something about Jeff's complaints here, maybe not).]]
+
 
 Further details of simulation results are given in Web Appendix D.
 
